fixing some problems with tests